k8s/webclient/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webclient
spec:
  selector:
    app: webclient
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
